--- a/survay-feedback/src/app/pages/dashboard/dashboard.component.css
+++ b/survay-feedback/src/app/pages/dashboard/dashboard.component.css
@@ -21,3 +21,12 @@ a {
         padding-bottom: 1.5%;
     }
 }
+.content{
+    margin-left: 10%;
+    width:90%;
+}
+
+.full-content{
+    margin-left: 0%;
+    width: 100%;
+}
