--- a/survay-feedback/src/app/pages/dashboard/dashboard.component.html
+++ b/survay-feedback/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
+<side-navbar></side-navbar>
+<div class="content">
 <div class="secondary" id="headLine">
-    <div class="container"><h2>WeSurve Administration</h2></div>
+    <div class="container"><h2>Dashboard</h2></div>
 </div>
 <div class="container">
     
@@ -31,4 +33,4 @@
         
     </div>
 </div>
-<side-navbar></side-navbar>
+</div>
