--- a/survay-feedback/src/app/pages/forgot-password/forgot-password.component.css
+++ b/survay-feedback/src/app/pages/forgot-password/forgot-password.component.css
@@ -69,6 +69,12 @@ a{
       color: #c07473;
     }
   
-  
-  
+    .loader {
+      animation: spin 2s linear infinite;
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
     
