--- a/survay-feedback/src/app/pages/forgot-password/forgot-password.component.html
+++ b/survay-feedback/src/app/pages/forgot-password/forgot-password.component.html
@@ -6,11 +6,16 @@
                     <div class="panel panel-default">
                         <div class="panel-body">Forgot Password</div>
                     </div>
-                    <div *ngIf="infoMessageStatus">
-                        <div class="{{infoMessageClass}} flipInX animated">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                            {{infoMessage}}
+                    <div *ngIf="!loadingData">
+                        <div *ngIf="infoMessageStatus">
+                            <div class="{{infoMessageClass}} flipInX animated">
+                                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                                {{infoMessage}}
+                            </div>
                         </div>
+                    </div>
+                    <div *ngIf="loadingData" class="alert alert-info flipInX animated">
+                        <span class="glyphicon glyphicon-repeat loader"></span> Processing... Please wait
                     </div>
                     <form>
                         <div class="form-group">
