--- a/survay-feedback/src/app/pages/login/login.component.html
+++ b/survay-feedback/src/app/pages/login/login.component.html
@@ -6,16 +6,6 @@
                 <div class="panel panel-default">
                     <div class="panel-body">Login</div>
                 </div>
-<!--
-                    <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input [(ngModel)]="user.email" #email="ngModel" type="email" class="form-control" id="email" placeholder="Enter email">
-                    </div>
-                    <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input [(ngModel)]="user.password" #password="ngModel" type="password" class="form-control" id="password" placeholder="Enter password">
-                    </div>
-                -->
                 
                 <form [formGroup]="rForm">
                         <div class="form-group has-success has-feedback" [ngClass]="{'has-error': rForm.controls['email'].errors && rForm.controls['email'].touched , 'has-success': !rForm.controls['email'].errors}">
@@ -50,20 +40,25 @@
                     </div>
                     
                 </form>
+                <div *ngIf="!loadingData">
                     <div *ngIf="error" class="alert alert-danger alert-dismissable flipInX animated">
                             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                                 Email or Password is incorrect!
                     </div>
+                </div>
+                <div *ngIf="loadingData" class="alert alert-info flipInX animated">
+                    <span class="glyphicon glyphicon-repeat loader"></span> <span id="loginMessage">Processing... Please wait</span>
+                </div>
 
                     
 
-                    <div class="divider"><div class="divider-text">OR</div></div>
+                <hr class="hr-text" data-content="OR, connect with" />
+
                     <div class="social-btn-group">
                         <button (click)="signIn('google')" class="google"><i class="fa fa-google left" aria-hidden="true"></i> Google</button>
                         <button (click)="signIn('facebook')" class="facebook"><i class="fa fa-facebook left" aria-hidden="true"></i> Facebook</button>
                     </div> 
-                <!-- <button (click)="logout()">logout</button> -->
-               <!-- Facebook Ends Here -->
+                
                   </div>
             <div class="col-sm-4"></div>
             </div>
