--- a/survay-feedback/src/app/app.component.css
+++ b/survay-feedback/src/app/app.component.css
@@ -16,13 +16,12 @@
     color: white;
 }
 
- 
-.footer {
-    position: relative;
-    bottom:0;
+  .footer {
+    position: absolute;
     right: 0;
+    bottom: 0;
     left: 0;
-    padding: 1% 0% 1% 0%;
+    padding: 1rem;
     color: white;
     text-align: center;
   }
