--- a/survay-feedback/src/app/pages/admin/create-surveyor/create-surveyor.component.html
+++ b/survay-feedback/src/app/pages/admin/create-surveyor/create-surveyor.component.html
@@ -1,5 +1,5 @@
 <div class="secondary" id="headLine">
-<div class="container"><h2>WeSurve Administration</h2></div>
+<div class="container"><h2>Create Surveyor</h2></div>
 </div>
 
 <!-- Userlist container start --> 
