--- a/survay-feedback/src/app/pages/edit-profile/edit-profile.component.html
+++ b/survay-feedback/src/app/pages/edit-profile/edit-profile.component.html
@@ -1,11 +1,11 @@
 <div class="secondary" id="headLine">
-        <div class="container"><h2>WeSurve Administration</h2></div>
+        <div class="container"><h2>Edit Profile</h2></div>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-                <form>
+                <form [formGroup]="rForm">
                 <div class="panel panel-default margin-bottom-10">
                     <div class="panel-heading"><h3>Change Password</h3></div>
                     <div class="panel-body" id="table-panel">
@@ -18,25 +18,32 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="password" [(ngModel)]="passwords.currentPassword"  type="password" class="form-control" name="currentPassword" placeholder="Current Password" id="currentPassword">
+                                <input id="password"  formControlName="password" [(ngModel)]="passwords.currentPassword" type="password" class="form-control" name="currentPassword" placeholder="Current Password" id="currentPassword">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="password" [(ngModel)]="passwords.newPassword" type="password"  class="form-control" name="newPassword" placeholder="New Password" id="newPassword">
+                                <input id="password" formControlName="newPassword" [(ngModel)]="passwords.newPassword" type="password"  class="form-control" name="newPassword" placeholder="New Password" id="newPassword">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="password" type="password"  class="form-control" name="confNewPassword" placeholder="Confirm New Password" id="confNewPassword">
+                                <input id="password" formControlName="confNewPassword" type="password"  class="form-control" name="confNewPassword" placeholder="Confirm New Password" id="confNewPassword">
+                            </div>
+                        </div>
+                        <div *ngIf="rForm.controls['newPassword'].valid && !rForm.controls['confNewPassword'].valid && rForm.controls['confNewPassword'].touched"
+                        class="alert alert-danger">
+                            <div *ngIf="rForm.controls['confNewPassword'].errors.matchOther">
+                                Password does not match
                             </div>
                         </div>
                     </div>
                     <div class="panel-footer text-center">
                         <p class="form-group margin-top-5 text-center">
-                            <button type="submit"  class="btn btn-success" (click)="changePassword();">Change Password</button>
+                                <!-- [disabled]="!rForm.valid" -->
+                            <button  type="submit"  class="btn btn-success" (click)="changePassword();">Change Password</button>
                         </p>    
                     </div>
                 </div>
