--- a/survay-feedback/src/app/pages/responder/previous-responses/previous-responses.component.html
+++ b/survay-feedback/src/app/pages/responder/previous-responses/previous-responses.component.html
@@ -1,5 +1,5 @@
 <div class="secondary" id="headLine">
-    <div class="container"><h2>WeSurve Administration</h2></div>
+    <div class="container"><h2>Filled Surveys</h2></div>
 </div>
 <div class="container">
     <div class="row">
@@ -7,20 +7,38 @@
                 <div class="col-sm-8">
                     <div *ngIf="errorMessageStatus">
                         <div class="alert alert-danger flipInX animated">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                             {{errorMessage}}
+                            <a (click)="getSurveyList()">
+                                <span class="pull-right glyphicon alert-glyphicon glyphicon-refresh img-circle text-warning" title="reload"></span>
+                            </a>
                         </div>
                     </div>
-                    <div class="panel panel-default margin-bottom-10">
-                        <div class="panel-heading"><h3>Survey List <input type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="filter using label name, survey name, id, description"></h3></div>
+                    <ng-template #EmptySurveyList>
+                        <div class="panel panel-default margin-bottom-10">
+                            <div class="panel-heading"></div>
+                            <div class="panel-body text-center" id="table-panel">
+                                <h1>OOPS!!</h1>
+                                <h1>You don't have any filled surveys.</h1>
+                                <p><img src="./assets/oops.png" width="150px" height="150px"/></p>
+                            </div>
+                        </div>
+                    </ng-template>
+                    <div class="panel panel-default margin-bottom-10" *ngIf="surveyList && surveyList.length !== 0 else EmptySurveyList">
+                        <div class="panel-heading"><h3>Survey List <input type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="Search Surveys"></h3></div>
                         <div class="panel-body" id="table-panel">
-                        <table class="table ">
+                            <div *ngIf="!resultFetched" id="loading">
+                                    <div id="ball-1" class="circle"></div>
+                                    <div id="ball-2" class="circle"></div>
+                                    <div id="ball-3" class="circle"></div>
+                            </div>
+                        
+                        <table class="table " *ngIf="resultFetched">
                             <thead>
                                 <tr class="pointer">
                                 <th [class]="order === 'id'"
                                 (click)="setOrder('id')">Survey ID<span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
                                 <th class="pointer">Survey </th>
-                                <th class="text-right">Survey Controls</th>
+                                <th class="text-right">View Result</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -32,7 +50,7 @@
                                 </td>
                                 <td  width="40%" class="text-right">
                                         <a class="btn icon-btn btn-warning small flipInX animated" [routerLink]="['/surveyResponse', survey.id ]">
-                                            <span class="glyphicon btn-glyphicon glyphicon-eye-open img-circle text-warning"></span>
+                                            <span class="glyphicon btn-glyphicon glyphicon-eye-open img-circle text-warning" title="View"></span>
                                           
                                         </a>
                                     
@@ -42,7 +60,7 @@
                         </table>
                     </div>
                     <div class="panel-footer text-center">
-                        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                        <pagination-controls *ngIf="resultFetched" (pageChange)="p = $event"></pagination-controls>
                     </div>
                 </div>
                 </div>
