--- a/survay-feedback/src/app/pages/responder/survey-response/survey-response.component.html
+++ b/survay-feedback/src/app/pages/responder/survey-response/survey-response.component.html
@@ -1,6 +1,6 @@
 <div class="secondary" id="headLine">
     <div class="container">
-        <h2>{{survey.name}}</h2>
+        <h2>{{survey.name}} - Response</h2>
     </div>
 </div>
 
@@ -20,12 +20,12 @@
                 </div>
                 <div class="panel-body" id="table-panel">
                     <div *ngFor="let question of survey.questions; let i= index">
-                        <h3>{{i+1}}. {{question.text}}</h3>
-                        <div *ngFor="let option of question.options; let j= index">
-                            ({{j+1}}) {{option.text}}
+                        <h3 class="inline-show">{{i+1}}. &nbsp;<div [froalaView]="question.text"></div></h3>
+                        <div *ngFor="let option of question.options; let j= index" class="inline-show">
+                            ({{j+1}}) &nbsp;<div [froalaView]="option.text"></div>
                         </div>
-                        <div id="answerBlock">
-                            Your Selected Option: <b>{{surveyResponseMap[question.id]}}</b>
+                        <div id="answerBlock" class="inline-show">
+                            Your Selected Option: &nbsp;<b><div *ngIf="surveyResponseMap[question.id]" [froalaView]="surveyResponseMap[question.id]"></div><div *ngIf="!surveyResponseMap[question.id]">(Not Answered)</div></b>
                         </div>
                     </div>
                 </div>
