--- a/survay-feedback/src/app/pages/surveyor/manage-survey/manage-survey.component.html
+++ b/survay-feedback/src/app/pages/surveyor/manage-survey/manage-survey.component.html
@@ -1,5 +1,11 @@
+<div [ngClass]="{'pace-running' : loading , 'pace-done' : !loading}">
+<div class="pace" [ngClass]="{'pace-active' : loading , 'pace-inactive' : !loading}">
+    <div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
+        <div class="pace-progress-inner"></div>
+</div>
+<div class="pace-activity"></div></div>
 <div class="secondary" id="headLine">
-    <div class="container"><h2>WeSurve Administration</h2></div>
+    <div class="container"><h2>Surveys</h2></div>
 </div>
 <div class="container">
     <div class="row">
@@ -7,14 +13,22 @@
                 <div class="col-sm-8">
                     <div *ngIf="errorMessageStatus">
                         <div class="alert alert-danger flipInX animated">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                            {{errorMessage}}
+                           {{errorMessage}}
+                           <a (click)="getSurveyList()">
+                                <span class="pull-right glyphicon alert-glyphicon glyphicon-refresh img-circle text-warning" title="reload"></span>
+                            </a>
                         </div>
                     </div>
-                    <div class="panel panel-default margin-bottom-10">
-                        <div class="panel-heading"><h3>Survey List <input type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="filter using label name, survey name, id, description"></h3></div>
+                    <div class="panel panel-default margin-bottom-10" *ngIf="surveyList && surveyList.length !== 0 else EmptySurveyList">
+                        <div class="panel-heading"><h3>Survey List <input type="text" class="form-control pull-right custom-input sharp-corner" [(ngModel)]="name" placeholder="Search Surveys"></h3></div>
                         <div class="panel-body" id="table-panel">
-                        <table class="table ">
+                                <div class="panel-body" id="table-panel">
+                                    <div *ngIf="!resultFetched" id="loading">
+                                        <div id="ball-1" class="circle"></div>
+                                        <div id="ball-2" class="circle"></div>
+                                        <div id="ball-3" class="circle"></div>
+                                    </div>
+                        <table class="table " *ngIf="resultFetched">
                             <thead>
                                 <tr class="pointer">
                                 <th [class]="order === 'id'"
@@ -30,36 +44,32 @@
                                 <td width="40%">{{survey.surveyName}}<br>
                                     <span class="mailid">{{survey.description | slice:0:50}}...</span>
                                 </td>
-                                <td  width="40%" class="text-right">
+                                <td  width="40%" class="text-right min-width">
                                         <a class="btn icon-btn btn-warning small flipInX animated" [routerLink]="['/viewSurvey', survey.id ]">
-                                            <span class="glyphicon btn-glyphicon glyphicon-eye-open img-circle text-warning"></span>
+                                            <span class="glyphicon btn-glyphicon glyphicon-eye-open img-circle text-warning" title="View"></span>
                                           
                                         </a>
                                     <!-- <button type="button" class="btn btn-default btn-sm small"><span class="glyphicon glyphicon-eye-open"></span></button> 
                                     <button type="button" class="btn btn-default btn-sm small"><span class="glyphicon glyphicon-trash"></span></button>  -->
                                     <a class="btn icon-btn btn-danger small flipInX animated" data-toggle="modal" data-target="#deleteModal" [class.selected]="survey === selectedSurveyForDeletion"
                                     (click)="onSelectForDeletion(survey)">
-                                        <span class="glyphicon btn-glyphicon glyphicon-trash img-circle text-danger"></span>
+                                        <span class="glyphicon btn-glyphicon glyphicon-trash img-circle text-danger" title="Delete"></span>
                                     </a>
                                     
                                     <!-- <button type="button" class="btn btn-default btn-sm small"><span class="glyphicon glyphicon-share-alt"></span></button>  -->
-                                   
+                                    <a class="btn icon-btn btn-info small flipInX animated" data-toggle="modal" data-target="#myModal" [class.selected]="survey === selectedSurvey"
+                                    (click)="onSelect(survey)">
+                                        <span class="glyphicon btn-glyphicon glyphicon-share-alt img-circle text-info" title="Share"></span>
+                                        
+                                    </a>
+
                                     <span *ngIf="survey.status == 'LIVE' else elseblock">
-                                        <a class="btn icon-btn btn-info small flipInX animated" data-toggle="modal" data-target="#myModal" [class.selected]="survey === selectedSurvey"
-                                        (click)="onSelect(survey)">
-                                            <span class="glyphicon btn-glyphicon glyphicon-share-alt img-circle text-info" title="Share"></span>
-                                            
-                                        </a>
-                                        <button type="button" class="btn btn-lg btn-secondary btn-toggle active" data-toggle="button" aria-pressed="true" autocomplete="off" (click)="changeSurveyStatus(survey.id)" id="sid{{survey.id}}" >
+                                        <button type="button" class="btn btn-lg btn-secondary btn-toggle active" data-toggle="button" aria-pressed="true" autocomplete="off" (click)="changeSurveyStatus(survey.id)" id="sid{{survey.id}}" title="Toggle to Unlive">
                                             <div class="handle"></div>
                                         </button>
                                     </span>
                                     <ng-template #elseblock>
-                                        <a class="btn icon-btn btn-info small flipInX animated disabled" href="#">
-                                            <span class="glyphicon btn-glyphicon glyphicon-share-alt img-circle text-info"></span>
-                                            
-                                        </a>
-                                        <button type="button" class="btn btn-lg btn-secondary btn-toggle" data-toggle="button" aria-pressed="true" autocomplete="off"  (click)="changeSurveyStatus(survey.id)" id="sid{{survey.id}}" >
+                                        <button type="button" class="btn btn-lg btn-secondary btn-toggle" data-toggle="button" aria-pressed="true" autocomplete="off"  (click)="changeSurveyStatus(survey.id)" id="sid{{survey.id}}" title="Toggle to Live">
                                             <div class="handle"></div>
                                         </button>
                                     </ng-template>
@@ -68,10 +78,23 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="panel-footer text-center">
-                        <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                    </div>
                 </div>
+                
+                <div class="panel-footer text-center">
+                        <pagination-controls *ngIf="resultFetched" (pageChange)="p = $event"></pagination-controls>
+                    </div>
+
+                    
+                <ng-template #EmptySurveyList>
+                        <div class="panel panel-default margin-bottom-10">
+                            <div class="panel-heading"></div>
+                            <div class="panel-body text-center" id="table-panel">
+                                <h1>OOPS!!</h1>
+                                <h1>You don't have any filled surveys.</h1>
+                                <p><img src="./assets/oops.png" width="150px" height="150px"/></p>
+                            </div>
+                        </div>
+                    </ng-template>
                 </div>
                 <div class="col-sm-2"></div>
     </div>
@@ -95,9 +118,16 @@
                     <input type="text" class="form-control" [(ngModel)]="selectedSurvey.surveyUrl" placeholder="content will be copy after click the copy button"
                          #inputTarget>
                     <span class="input-group-btn">
-                        <button class="btn btn-default large" [class.btn-success]= "isCopied" type="button" [ngxClipboard]="inputTarget" (cbOnSuccess)="isCopied2 = true"><span class="	glyphicon glyphicon-copy"></span></button>
+                        <button class="btn btn-default large" title="Copy to clipboard" [class.btn-success]= "isCopied" type="button" [ngxClipboard]="inputTarget" (cbOnSuccess)="isCopied2 = true"><span class="glyphicon glyphicon-duplicate"></span></button>
                     </span>
                 </div>
+                <hr class="hr-text" data-content="Share Using" />
+                <p *ngIf="selectedSurvey" id="share">
+                    <a class="facebook" ceiboShare  [facebook]="{u: selectedSurvey.surveyUrl}"><i class="fa fa-facebook"></i></a>
+                    <a class="linkedin" ceiboShare  [linkedIn]="{url:selectedSurvey.surveyUrl}"><i class="fa fa-linkedin"></i></a>
+                    <a class="googleplus" ceiboShare  [googlePlus]="{url:selectedSurvey.surveyUrl}"><i class="fa fa-google-plus"></i></a>
+                    <a class="twitter" ceiboShare  [twitter]="{url:selectedSurvey.surveyUrl, text:'Do a awesome Survey ', hashtags:'survey, wesurve'}"><i class="fa fa-twitter"></i></a>                 
+                </p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -131,3 +161,5 @@
         
         </div>
         </div>
+
+    </div>
