--- a/survay-feedback/src/styles.css
+++ b/survay-feedback/src/styles.css
@@ -1,9 +1,16 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-/* You can add global styles to this file, and also import other style files */
-html {
+
+  html {
     height: 100%;
     box-sizing: border-box;
   }
+  
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+
 
 /* Let's get this party started */
 ::-webkit-scrollbar {
@@ -33,6 +40,10 @@ body {
     background: #F5F5F5;  
     min-width: initial;
     overflow-y: scroll;
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
 }
 
 .primary {
@@ -66,6 +77,7 @@ body {
 .btn{
     width: 30%;
     border-radius: 0px;
+    min-width: max-content;
 }
 
 .divider {
@@ -99,3 +111,185 @@ body {
 .text-primary-for-heading{
     color : #009cdb;
 }
+
+
+.pace {
+    -webkit-pointer-events: none;
+    pointer-events: none;
+  
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+  .pace-inactive {
+    display: none;
+  }
+  
+  .pace .pace-progress {
+    background: #e3714d;
+    position: fixed;
+    z-index: 2000;
+    top: 0;
+    right: 100%;
+    width: 100%;
+    height: 2px;
+  }
+  .wzrk-alert{
+    padding-bottom: 15px !important;
+  }
+
+  .circle {
+    display: inline-block;
+    background-color: #009cdb;
+    height: 15px;
+    width: 15px;
+    border-radius: 25px;
+  }
+  
+  #container {
+    height: 200px;
+    margin-top: 50px;
+  }
+  
+  #ball-1{
+    -webkit-animation-name: bounce;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-duration: 1.2s;
+    -webkit-animation-iteration-count: infinite;
+  }
+  #ball-2{
+    -webkit-animation-name: bounce;
+    -webkit-animation-delay: 1.1s;
+    -webkit-animation-duration: 1.2s;
+    -webkit-animation-iteration-count: infinite;
+  }
+  #ball-3{
+    -webkit-animation-name: bounce;
+    -webkit-animation-delay: 1.2s;
+    -webkit-animation-duration: 1.2s;
+    -webkit-animation-iteration-count: infinite;
+  }
+  
+  @-webkit-keyframes bounce {
+    0% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(23px);
+    }
+    60% {
+      transform: translateY(-25px);
+    }
+    80%{
+      transform: translateY(0);
+    }
+  }
+
+  #loading{
+    padding-left: 48%;
+    padding-top: 20%;
+  }
+
+  .alert-glyphicon{
+    padding:8px;
+    background:#ffffff;
+    margin-top: -8px;
+  }
+
+  .hr-text {
+    line-height: 1em;
+    position: relative;
+    outline: 0;
+    border: 0;
+    background-color: transparent !important;
+    color: black;
+    text-align: center;
+    height: 1.5em !important;
+    opacity: .5;
+  }
+    .hr-text:before {
+    content: '';
+    background: linear-gradient(to right, transparent, #222, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+    }
+    .hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    
+    padding: 0 .5em;
+    line-height: 1.5em;
+    color: #222;
+    background-color: #fcfcfa;
+    }
+
+
+    
+#share {
+	width: 100%;
+  	margin: 10px auto;
+  	text-align: center;
+}
+
+/* buttons */
+
+#share a {
+	width: 50px;
+  	height: 50px;
+  	display: inline-block;
+  	margin: 8px;
+  	border-radius: 50%;
+  	font-size: 24px;
+  	color: #fff;
+	opacity: 0.75;
+	transition: opacity 0.15s linear;
+}
+
+#share a:hover {
+	opacity: 1;
+}
+
+/* icons */
+
+#share i {
+  	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
+/* colors */
+
+.facebook {
+     background: #3b5998;
+     padding-bottom: 1%;
+}
+
+.twitter {
+      background: #55acee;
+      padding-bottom: 1%;
+}
+
+.googleplus {
+      background: #dd4b39;
+      padding-bottom: 1%;
+}
+
+.linkedin {
+      background: #0077b5;
+      padding-bottom: 1%;
+}
+
+.pinterest {
+  	background: #cb2027;
+}
+
+
+.large {
+    width : 100%;
+  }
